[package]
name = "robinhood"
version = "0.1.1-alpha.1"
description = "Rust Wrapper for Robinhood Trade"
readme = "README.md"
authors = ["Sanko Robinson <sanko@cpan.org>"]

# homepage =
documentation = "https://docs.rs/robinhood/"
repository = "https://github.com/sanko/robinhood_rs"
license = "Artistic-2.0"

keywords = ["robinhood", "stocks"]
categories = ["api-bindings", "web-programming::http-client"]

include = [
  "README.md",
  "Cargo.toml",
  "LICENSE",
  "src/**/*"
]

[dependencies]
serde = "1"
serde_derive = "1"
serde_json = "1"
failure = "0.1.2"
reqwest = "0.8.1"
chrono = { version = "0.4", features = ["serde"] }

[target.'cfg(not(any(target_os = "windows", target_os = "macos")))'.dependencies.openssl]
version = "~0.9"

[badges]
travis-ci = { repository = "sanko/robinhood_rs", branch = "master" }
appveyor = { repository = "sanko/robinhood_rs", branch = "master", service = "github" }
